--- a/HTML/login.html
+++ b/HTML/login.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Style/style.css">
 </head>
 
 <body>
     <div class="main">
         <div class="overlay">
-        <img src="logo.png" alt="">
+        <img src="/Image/logo.png" alt="">
         <div class="contains">
             <div class="container1">
                 <form method="post">
